--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-langgraph==0.1.0
-langchain==0.1.14
-langchain-openai==0.1.1
-langchain-core==0.1.33
-pydantic==2.5.0
-python-dotenv==1.0.0
-requests==2.31.0
-numpy==1.24.0
+langgraph>=0.2.0
+langchain>=0.3.0
+langchain-openai>=0.2.0
+langchain-core>=0.3.0
+langchain-community>=0.3.0
+pydantic>=2.5.0
+python-dotenv>=1.0.0
+requests>=2.31.0
+numpy>=1.24.0
+chromadb>=0.4.0
