Add Meta-Learning Agents feature for AGI advancement

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ LOG_LEVEL=INFO
 # Framework Configuration
 MAX_RETRIES=3
 AGENT_TIMEOUT=30
+
+# Meta-Learning Configuration
+META_LEARNING_ENABLED=true
+META_LEARNING_MODEL=simple_nn
+ADAPTATION_STEPS=5
